add method to contour facilitate rotation